--- a/.github/workflows/openai.yml
+++ b/.github/workflows/openai.yml
@@ -17,10 +17,10 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        curl https://api.openai.com/v1/engines/davinci-codex/completions \
+        curl -X POST https://api.openai.com/v1/engines/davinci-codex/completions \
           -H "Content-Type: application/json" \
           -H "Authorization: Bearer $OPENAI_API_KEY" \
           -d '{
-            "prompt": "Translate the following English text to French: \'Hello, world!\'",
+            "prompt": "Translate the following English text to French: \"Hello, world!\"",
             "max_tokens": 60
           }'
