--- a/.github/workflows/openai.yml
+++ b/.github/workflows/openai.yml
@@ -23,4 +23,10 @@ jobs:
           -d '{
             "prompt": "Translate the following English text to French: \"Hello, world!\"",
             "max_tokens": 60
-          }'
+          }' > response.json
+
+    - name: Upload response
+      uses: actions/upload-artifact@v4
+      with:
+        name: api-response
+        path: response.json
