--- a/.github/workflows/openai.yml
+++ b/.github/workflows/openai.yml
@@ -13,17 +13,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Call OpenAI API
+    - name: Run OpenAI API call script
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        curl -X POST https://api.openai.com/v1/engines/davinci-codex/completions \
-          -H "Content-Type: application/json" \
-          -H "Authorization: Bearer $OPENAI_API_KEY" \
-          -d '{
-            "prompt": "Translate the following English text to French: \"Hello, world!\"",
-            "max_tokens": 60
-          }' > response.json
+        chmod +x ./call_openai.sh
+        ./call_openai.sh $OPENAI_API_KEY
 
     - name: Upload response
       uses: actions/upload-artifact@v4
